# FAST_LIO_LOCALIZATION

./: CMakeLists.txt  README.md  setup.py
config/: mid360.yaml
fast_lio_localization/: global_localization.py  invert_livox_scan.py  pcd_publisher.py  transform_fusion.py
launch/: lidar.launch.py  localization.launch.py
rviz/: fastlio_localization.rviz
src/: icp_test.py  laserMapping.cpp  localization_debug.py  preprocess.cpp  torch_test.py
